--- a/slides/outro.adoc
+++ b/slides/outro.adoc
@@ -5,10 +5,14 @@ image::conclusion.jpg[background, size=cover]
 
 === !
 
-[%step]
+
 - Quand on n'a qu'un marteau tout ressemble à un clou.
-- Composition de recettes complexes.
-- _java preview feature_
+
+[.fragment]
+Composition de recettes complexes.
+
+[.fragment]
+_java preview feature_
 
 
 [.transparency.columns.no-transition]
