Adapt to DevoxxFR

--- a/slides/intro.adoc
+++ b/slides/intro.adoc
@@ -61,8 +61,7 @@ Tech Lead/Architecte, Instructeur en permis de réécriture
 [.column]
 --
 [.vertical-align-middle]
-image:logo_onepoint.jpeg[width=50]
-onepoint BDX
+image:logo_onepoint.png
 
 [.vertical-align-middle]
 icon:github[] @jtama image:avatar.png[width=100]
