--- a/slides/01-openrewrite.adoc
+++ b/slides/01-openrewrite.adoc
@@ -1,7 +1,8 @@
 
-[%notitle]
+[%notitle.transparency]
 == Openrewrite
 
+image::title.jpg[background, size=cover]
 image::openrewrite.svg[width=30%]
 image::under_logo.svg[]
 
@@ -24,13 +25,14 @@ C'est un outil java open-source - Apache 2
 
 image::concepts.jpg[background, size=cover]
 
-[%notitle]
+[%notitle.transparency.blur-background]
 === Les concepts (2/2)
 
-[%step]
-. Recipe
-. **L**ossless **S**yntax **T**ree
-. Le pattern visitor
+image::concepts.jpg[background, size=cover]
+
+Recipe
+[.fragment]
+**L**ossless **S**yntax **T**ree
 
 [.notes]
 --
@@ -56,9 +58,10 @@ Par exemple 73 points d'extension pour Java...
 
 image::anatomy.png[background, size=cover]
 
-[%notitle]
+[%notitle.transparency]
 === Anatomie d'une recette (2/2)
 
+image::anatomy.png[background, size=cover]
 [source,java,highlight="3|5|7|9|11|13"]
 ----
 public abstract class Recipe implements Cloneable {
@@ -83,8 +86,10 @@ public abstract class Recipe implements Cloneable {
 Des résultats sous forme de _data tables_, et le concept de préconditions.
 --
 
-[.columns]
+[.columns.transparency]
 === !
+
+image::title.jpg[background, size=cover]
 
 [.column.is-one-third]
 --
