--- a/slides/03-declarative-recipes.adoc
+++ b/slides/03-declarative-recipes.adoc
@@ -10,10 +10,13 @@ Une recette déclarative est en fait juste un format de déclaration de recette 
 --
 
 
-[%notitle]
+[%notitle.transparency]
 === Et ça ressemble à ?
 
+image::declarative.jpg[background, size=cover]
+
 [source%linenums,yaml,highlight="3|4..10|13..17|12|20|26..28|29..32"]
+.rewrite.yml
 ----
 ---
 type: specs.openrewrite.org/v1beta/recipe
@@ -53,45 +56,24 @@ recipeList:
 --
 On va créer une recette declarative qui permet de supprimer une dépendance toxique.
 Et on imagine ici que la dernière recette est accessible ailleurs.
---
 
-[%notitle]
-=== Comment et où ?
-
-
-Dans un fichier qui doit s'appeler `rewrite.yml`
-
-[.fragment]
 À la racine d'un projet.
-[.fragment]
 Dans le répertoire `META-INF/rewrite`
-
-[.notes]
---
 Attention, pas `yaml`
-Projet Maven ou Gradle...
+Et puis un coup de mvn run
 --
 
-[%notitle]
-=== Et on l'exécute comme ça
-
-[.fragment]
-[source%linenums,console,highlight="1|2..3"]
-----
-$ mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
-    -Drewrite.activeRecipes=\
-      com.github.jtama.openrewrite.RemovesThatToxicDependency
-----
-
-[.no-transition]
+[.no-transition.transparency.blur-background]
 === Distribution
 
+image::declarative.jpg[background, size=cover]
 Inclure ce fichier dans un module maven fantôme...
 
 
-[.columns]
+[.columns.transparency]
 === !
 
+image::title.jpg[background, size=cover]
 [.column.is-one-third]
 --
 image::permis_de_refactoring.png[]
