hide logo on demo slides

--- a/slides/04-catalogue.adoc
+++ b/slides/04-catalogue.adoc
@@ -8,7 +8,7 @@ image::catalog.avif[background, size=cover]
 C'est en tout cas vrai pour toutes les recettes proposées par OpenRewrite, mais il peut y en avoir d'autres.
 --
 
-[%notitle,background-iframe="https://docs.openrewrite.org/recipes/java/testing/junit5/junit4to5migration"]
+[%notitle.demo,background-iframe="https://docs.openrewrite.org/recipes/java/testing/junit5/junit4to5migration"]
 === Partons à la découverte du catalogue
 
 [.notes]
