--- a/slides/02-running-recipes.adoc
+++ b/slides/02-running-recipes.adoc
@@ -19,10 +19,10 @@ Pareil avec gradle
 [source%linenums,console,highlight="1|2..3|4..5",step=0]
 ----
 $ mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
-  -Drewrite.recipeArtifactCoordinates=\
-   org.openrewrite.recipe:rewrite-testing-frameworks:RELEASE\
-  -Drewrite.activeRecipes=\
-   org.openrewrite.java.testing.junit5.JUnit4to5Migration
+  -Drewrite.recipeArtifactCoordinates=
+    org.openrewrite.recipe:rewrite-testing-frameworks:RELEASE\
+  -Drewrite.activeRecipes=
+    org.openrewrite.java.testing.junit5.JUnit4to5Migration
 ----
 [.fragment, data-fragment-index=0]
 Déclaration du plugin
