--- a/slides/04-catalogue.adoc
+++ b/slides/04-catalogue.adoc
@@ -1,7 +1,7 @@
 [.transparency.no-transition]
 == Catalogue de recettes
 
-image::catalog.avif[background, size=cover]
+image::catalog.png[background, size=cover]
 
 [.notes]
 --
@@ -22,12 +22,12 @@ Plus de 500 recettes la dernière fois que j'ai compté.
 
 [.column.is-one-third]
 --
-image::permis_de_refactoring.png[]
+image::magic/malefincent.webp[]
 --
 
 [.column]
 --
-- ✅ Vue d'ensemble du véhicule
-- ✅ Savoir démarrer le véhicule
-- ✅ Savoir lire une carte
+- ✅ Connaître les ingrédients
+- ✅ Savoir où les acheter
+- ✅ Savoir lire le grimoire
 --
