--- a/toxic-library-user/README.adoc
+++ b/toxic-library-user/README.adoc
@@ -1,4 +1,11 @@
-[source%linenums, bash]
+[source%linenums, console]
+----
+mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
+-Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-testing-frameworks:RELEASE \
+-Drewrite.activeRecipes=org.openrewrite.java.testing.junit5.JUnit4to5Migration
+----
+
+[source%linenums, console]
 ----
 mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
 -Drewrite.recipeArtifactCoordinates=com.github.jtama:toxic-library-remover:1.0.1-SNAPSHOT \
