--- a/slides/05-coding-recipes.adoc
+++ b/slides/05-coding-recipes.adoc
@@ -20,7 +20,7 @@ image::magic/jackjack.webp[]
 [.column]
 --
 - ✅ Connaître les ingrédients
-- ✅ Savoir où les acheter
+- ✅ Avoir son chaudron
 - ✅ Savoir lire le grimoire
 - ✅ Savoir jeter un sort
 - ✅ Créer vos propres sorts
