--- a/slides/02-running-recipes.adoc
+++ b/slides/02-running-recipes.adoc
@@ -51,7 +51,7 @@ image::magic/nim.webp[]
 [.column]
 --
 - ✅ Connaître les ingrédients
-- ✅ Savoir où les acheter
+- ✅ Avoir son chaudron
 --
 
 [.notes]
