--- a/slides/04-catalogue.adoc
+++ b/slides/04-catalogue.adoc
@@ -30,6 +30,6 @@ image::magic/malefincent.webp[]
 [.column]
 --
 - ✅ Connaître les ingrédients
-- ✅ Savoir où les acheter
+- ✅ Avoir son chaudron
 - ✅ Savoir lire le grimoire
 --
